hphp/hack/test/typecheck/readonly/deep_prop_array.php.like_types.exp
File "deep_prop_array.php", line 10, characters 10-13:
Was expecting a return type hint (Typing[4030])
File "deep_prop_array.php", line 12, characters 3-11:
This value is readonly, its properties cannot be modified (Typing[4409])
